[project]
name = "circuit-combiner"
version = "1.0.0"
description = "Circuit Combiner: A quantum circuit combiner service"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "antlr4-python3-runtime==4.13.1",
    "dill==0.3.8",
    "grpcio==1.65.1",
    "grpcio-reflection>=1.65.1",
    "grpcio-tools==1.65.1",
    "mpmath==1.3.0",
    "mypy>=1.15.0",
    "numpy==1.26.4",
    "openqasm3==0.5.0",
    "pbr==6.0.0",
    "protobuf==5.27.1",
    "python-dateutil==2.9.0.post0",
    "qiskit==1.1.0",
    "qiskit-qasm3-import==0.5.0",
    "rustworkx==0.14.2",
    "scipy==1.13.1",
    "six==1.16.0",
    "stevedore==5.2.0",
    "symengine==0.11.0",
    "sympy==1.12.1",
    "typing-extensions==4.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "grpcio==1.65.1",
    "grpcio-tools==1.65.1",
    "qiskit==1.1.0",
    "qiskit-qasm3-import==0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py",
]
exclude = [
  "src/**/v1/**/*.py", # Generated codes
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
]

[tool.mypy]
files = ["src", "tests"]
exclude = [
  "src/.*/v1/", # Generated codes
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]
