[project]
name = "oqtopus-engine-core"
version = "2.1.1"
description = "OQTOPUS Engine in the backend layer retrieves jobs managed in OQTOPUS Cloud and executes quantum programs"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.13,<4.0"
dependencies = [
  "certifi>=2026.6.17",
  "oqtopus-util>=1.0.2",
  "docker>=7.1.0",
  "grpcio>=1.81.1",
  "protobuf>=7.35.1",
  "pydantic>=2.13.4",
  "python-json-logger>=4.1.0",
  "pyyaml>=6.0.3",
  "qiskit==2.4.2",
  "qiskit-qasm3-import>=0.6.0",
  "six>=1.17.0",
  "urllib3>=2.7.0",
  "uuid7>=0.1.0",
  "opentelemetry-api>=1.43.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-grpc>=0.48b0",
  "opentelemetry-instrumentation-urllib3>=0.48b0",
]

[project.urls]
documentation = "https://oqtopus-engine.readthedocs.io/"
repository = "https://github.com/oqtopus-team/oqtopus-engine"

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.1.1",
  "qiskit-aer>=0.17.2",
  "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
  #"tests/**/*.py",
]
exclude = [
  "src/**/interfaces/**/*.py", # Generated codes
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
]

[tool.mypy]
files = ["src", "tests"]
exclude = [
  "src/.*/interfaces/", # Generated codes
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]
testpaths = ["tests"]
