[project]
name = "sse-runtime"
version = "1.0.0"
description = "SSE Runtime: A runtime container for SSE"
license = "Apache-2.0"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "grpcio==1.62.2",
    "grpcio-tools==1.62.2",
    "networkx==3.4.2",
    "pandas==2.0.3",
    "polars==1.24.0",
    "tqdm==4.66.1",
    "scipy>=1.10.1",
    "scikit-learn==1.6.1",
    "quri-parts==0.20.3",
    "quri-parts-oqtopus==1.0.1",
    "qiskit==1.4.1",
    "qulacs==0.5.6",
    "skqulacs==0.5.2",
    "pyqubo==1.5.0",
    "openjij==0.9.2",
    "cirq==1.3.0",
    "pennylane==0.40.0",
    "openfermion==1.6.1",
    "mypy>=1.15.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py",
]
exclude = [
  "src/**/v1/**/*.py", # Generated codes
  "src/quri_parts_oqtopus/rest/**/*.py",
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
]

[tool.mypy]
files = ["src"]
exclude = [
  "src/.*/v1/", # Generated codes
]
ignore_missing_imports = true
